41) kernel: mips: c-r4k: reapply fix cache flushing for MT cores.<br>
42) kernel: mips: cache flush functions are reworked.<br>
43) kernel: mips: fix bug in using flush_cache_vunmap.<br>
44) kernel: mips: new GIC clocksource. Add new GIC clockevent driver.<br>
45) kernel: mips: lost GIC CEVT/CSRC commits (fix switch to GIC timer issue).<br>
46) kernel: mips: complete disable MIPS CEVT_R4K on enable CEVT_GIC.<br>
47) kernel: usb: qmi_wwan: add Sierra Wireless EM74xx device ID, Gemalto's Cinterion PHxx.<br>
48) kernel: usb: usbnet: cleanup after bind() in probe().<br>
49) kernel: usb: xhci: use non-interruptible sleep for XHCI commands.<br>
50) kernel: usb: cdc_ncm: toggle altsetting to force reset before setup, do not call usbnet_link_change from cdc_ncm_bind.<br>
51) kernel: usb: qcserial: add Sierra Wireless EM74xx device ID.<br>
52) kernel: usb: xhci: correct the usage of USB_CTRL_SET_TIMEOUT.<br>
53) kernel: net: fastpaths: remove old ugli hack and move flags to end of cb (fix compath with new GRO logic).<br>
54) kernel: net: csum: update csum_block_add to use rotate instead of byteswap.<br>
55) kernel: net: ppp: ensure file->private_data can't be overridden.<br>
56) kernel: net: vlan: propagate gso_max_segs.<br>
57) kernel: net: gro: selective flush of packets.<br>
58) kernel: net: gro: fix possible panic in skb_gro_receive().<br>
59) kernel: net: gro: add checksuming helpers.<br>
60) kernel: net: gro: only verify TCP checksums for candidates.<br>
61) kernel: net: gro: clean up tcpX_gro_receive checksum verification.<br>
62) kernel: net: gro: change GRO overflow strategy.<br>
63) kernel: net: ipv4: fix memory leaks in ip_cmsg_send() callers.<br>
64) kernel: net: ipv6: gro: fix IPV6_GRO_CB(skb)->proto problem.<br>
65) kernel: net: netfilter: nf_defrag_ipv4: drop redundant ip_send_check().<br>
66) kernel: net: bridge: update max_gso_segs and max_gso_size.<br>
67) kernel: net: bridge: multicast: notify eth switch on every leave event.<br>
<br>
<br>
<br>